# video_tools

./: .env.example  .gitignore  README.md  example.py  example_database.py  example_url_database.py  pyproject.toml
src/video_tools/: __init__.py  database.py  transcribevideo.py
src/video_tools/sql/: queries.sql
