[project]
name = "video-tools"
version = "0.1.0"
description = "Video transcription tools using Azure Speech-to-Text and FFmpeg"
readme = "README.md"
authors = [
    { name = "Mike Lakas", email = "mike@onyxpointsystems.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "azure-cognitiveservices-speech>=1.34.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "psycopg2-binary>=2.9.0",
    "aiosql>=7.0.0",
    "yt-dlp>=2023.12.30",
    "tiktoken>=0.11.0",
]

[project.scripts]
video-tools = "video_tools:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
